--- a/css/style.css
+++ b/css/style.css
@@ -552,7 +552,7 @@ header nav .menu ul a li:hover {
 }
 
 .service-item .item .service-icon ion-icon {
-  font-size: 70px;
+  font-size: 50px;
   padding: 10px 0;
   color: white;
 }
@@ -563,6 +563,7 @@ header nav .menu ul a li:hover {
 }
 
 .service-item .item .service-detail p {
+  line-height: 20px;
   font-size: 14px;
   text-align: left;
 }
